--- a/config.yaml
+++ b/config.yaml
@@ -12,10 +12,7 @@
       pwd: veronica
       username: NOUT
     target:
-    - rule:
-        source_delete: true
-        source_storage_days: 61
-      target_dir:
+    - target_dir:
         dir: "/NOUT/\u041C\u043E\u0438 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\
           \u044B/test/"
         drive: Users
